spec/static_namespacing.expected
100.0C
0.0C
Parse error: spec/static_namespacing.kex:27:3: runtime error: Undefined function: Fahrenheit
