spec/static_namespacing.kex
# Static constructors/constants declared in a `static do` block live only
# under the declaring type's namespace (Temperature.Fahrenheit(...)) — they
# must not leak into the surrounding scope as bare names.
record Temperature do
  celsius : Float

  static do
    let Fahrenheit(value: Float) -> Temperature do
      return Temperature { celsius: (value - 32.0) * 5.0 / 9.0 }
    end

    let Freezing = Temperature { celsius: 0.0 }
  end
end

make Temperature do
  let to(String) -> String do
    return "${@celsius}C"
  end
end

main do
  IO.printLine(Temperature.Fahrenheit(212.0).to(String))
  IO.printLine(Temperature.Freezing.to(String))

  # Bare access is not in scope — this must fail at runtime.
  Fahrenheit(0.0)
  IO.printLine("unreachable")
end
